--- a/index.html
+++ b/index.html
@@ -1,1 +1,186 @@
-test
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <title>Code for Kidzz!</title>
+</head>
+
+<body>
+
+    <header>
+        <nav>
+            <img id="logo" src="img/logo.svg" alt="logo">
+            <ul>
+                <a href="#">over ons</a>
+                <a href="#">lesmateriaal</a>
+                <a href="#">contact</a>
+            </ul>
+            <a href="#">
+                <div class="rozeKnop">
+                    <img src="img/switch.svg" alt="switch kleuren" class="switch">
+                </div>
+                <div class="blauweKnop">
+                    <img src="img/switchblue.svg" alt="switch kleuren" class="switch">
+                </div>
+            </a>
+        </nav>
+    </header>
+
+    <div class="kop">
+        <div id="tekstvak">
+            <h1>Van beginner naar expert <br>
+                Het lesmateriaal brengt je verder</h1>
+            <div id="intro">
+                <p id="introductie">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam
+                    porta sem
+                    malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id
+                    elit
+                    non mi porta gravida at eget metus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus
+                    dolor
+                    auctor.</p>
+            </div>
+        </div>
+    </div>
+
+
+    <main>
+        <div id="keuze">
+            <div class="hok plaatje " id="hokEen">
+                <p class="itemTekst">leer</p>
+            </div>
+            <div class="hok plaatje" id="hokTwee">
+                <p class="itemTekst">speel</p>
+            </div>
+            <div class="hok plaatje " id="hokDrie">
+                <p class="itemTekst">codeer</p>
+            </div>
+        </div>
+
+
+        <div id="accordion">
+            <h3>Algemene introductie</h3>
+            <div class="video-player">
+                <video id="myPlayerID" data-video-id="5992439742001" data-account="1752604059001" data-player="default"
+                    data-embed="default" data-application-id class="video-js" controls>
+                    <source src="vid/videoEen.mp4" type="video/mp4" />
+                </video>
+            </div>
+            <h3>Workshop 1: Kleuren met code</h3>
+            <div class="video-player">
+                <video id="myPlayerID" data-video-id="5992439742001" data-account="1752604059001" data-player="default"
+                    data-embed="default" data-application-id class="video-js" controls>
+                    <source src="vid/videoTwee.mp4" type="video/mp4" />
+                </video>
+            </div>
+            <h3>Workshop 2: Vormen maken</h3>
+            <div class="video-player">
+                <video id="myPlayerID" data-video-id="5992439742001" data-account="1752604059001" data-player="default"
+                    data-embed="default" data-application-id class="video-js" controls>
+                    <source src="vid/videoDrie.mp4" type="video/mp4" />
+                </video>
+            </div>
+            <h3>Workshop 3: Beweging</h3>
+            <div class="video-player">
+                <video id="myPlayerID" data-video-id="5992439742001" data-account="1752604059001" data-player="default"
+                    data-embed="default" data-application-id class="video-js" controls>
+                    <source src="vid/videoVier.mp4" type="video/mp4" />
+                </video>
+            </div>
+        </div>
+
+        <div class="support">
+            <h3>Support</h3>
+            <p id="witje">Onze studenten staan voor je klaar. <br> Etiam porta sem malesuada magna mollis euismod. <br>
+                Nullam id
+                dolor id
+                nibh ultricies vehicula ut id elit. </p>
+            <div class="container">
+                <div id="slider">
+                    <ul class="slides">
+                        <li class="slide">
+                            <div class="caption">
+                                <h2 class="aangepast">Stan Ceha</h2>
+                                <p>
+                                    Gespecialiseerd in ontwerpen, online en offline~!
+                                </p>
+                            </div>
+                            <img class="pf" src="img/profilePicture.png" alt="Slide 1">
+
+                        </li>
+                        <li class="slide">
+                            <div class="caption">
+                                <h2 class="aangepast">Maric Brauers</h2>
+                                <p>
+                                    Voor al uw tekst en uitleg, waar en waneer dan ook!
+                                </p>
+                            </div>
+                            <img class="pf" src="img/profilePicture.png" alt="Slide 1">
+                        </li>
+                        <li class="slide">
+                            <div class="caption">
+                                <h2 class="aangepast">Stefan Rompen</h2>
+                                <p>
+                                    Ondersteunt bij digitale oplossingen.
+                                </p>
+                            </div>
+                            <img class="pf" src="img/profilePicture.png" alt="Slide 1">
+                        <li class="slide">
+                            <div class="caption">
+                                <h2 class="aangepast">Wie?</h2>
+                                <p>
+                                    Geen idee. Anders bleef dit leeg
+                                </p>
+                            </div>
+                            <img class="pf" src="img/profilePicture.png" alt="Slide 1">
+
+                        <li class="slide">
+                            <div class="caption">
+                                <h2 class="aangepast">jQuery Slider</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod aliqua.
+                                </p>
+                            </div>
+                            <img class="pf" src="img/profilePicture.png" alt="Slide 1">
+                        </li>
+                    </ul>
+                </div>
+                <div class="clearfix"></div>
+                <div class="directions">
+                    <span class="left"></span>
+                </div>
+                <div class="directions">
+                    <span class="right"></span>
+                </div>
+                <div class="bullets">
+                    <span class="bullet active" id="bullet1" data-image="4" data-slide="1"></span>
+                    <span class="bullet" id="bullet2" data-image="5" data-slide="2"></span>
+                    <span class="bullet" id="bullet3" data-image="6" data-slide="3"></span>
+                    <span class="bullet" id="bullet4" data-image="7" data-slide="4"></span>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <h1 class="footerTekst">
+            Klaar voor de <br> volgende uitdaging?
+        </h1>
+        <p class="footerTekst">In ons expertprogramma vind je lessen voor gevorderden </p>
+        <a href="#">
+            <div class="CTA">
+                <h4>KOM MAAR OP</h4>
+            </div>
+        </a>
+    </footer>
+    <script src=https://code.jquery.com/jquery-3.5.1.min.js></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://vjs.zencdn.net/7.8.2/video.js"></script>
+    <script src="//players.brightcove.net/1752604059001/default_default/index.min.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
